deploy/overlays/review/ingress-patch.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  tls:
    - hosts:
        # Flux envsubst replaces variables found in `deploy-vars.env` or falls back to defaults
        #
        - ${INGRESS_SUBDOMAIN:=sugar-suite}.ltc.bcit.ca
      secretName: star-ltc-bcit-ca
  rules:
    - host: ${INGRESS_SUBDOMAIN:=sugar-suite}.ltc.bcit.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service
                port:
                  number: 80
